libmapicalendar_include_HEADERS = \
                            Appointment.h \
                            CalendarTable.h \
                            Conversions.h \
                            IAppointment.h \
                            IOccurrence.h \
                            MAPICalendar.h \
                            PropertyPool.h \
                            RecurrencePattern.h

libmapicalendar_includedir = $(includedir)/libmapicalendar
